# stock-report

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  notes.ipynb  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
core/: analysis.py  data.py  esg.py  main.py  pdf.py  test.py
src/stock-report/: __main__.py  analysis.py  pdf.py
src/stock-report/stock_report.egg-info/: PKG-INFO  SOURCES.txt
src/stock_report.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
stock-report/: __main__.py  analysis.py
stock_report/: __main__.py  analysis.py  pdf.py
stock_report.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
