[metadata]
name = stock-report
version = 0.0.2
author = Kevin Pfeiffer
author_email = pfeiffer.kevin@gmx.de
description = StockReport is a Phyton program that allows you to simply create an automated PDF report about a stock.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pfeiffer-dev/stock-report
project_urls =
    Bug Tracker = https://github.com/pfeiffer-dev/stock-report/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial :: Investment
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src